--- a/styles/main.less
+++ b/styles/main.less
@@ -1,4 +1,8 @@
+/* L'option less est là pour donner accés au CSS présent dans bootstrap directement dans LESS
+   Une autre option serait de prendre la version LESS de bootstrap, le but ici n'est pas d'apprendre les mixins de bootstrap mais bien les rudiments de LESS.
+*/
 @import (less) "vendors/bootstrap.css";
+
 
 body {
   &:extend(.container);
