--- a/styles/main.less
+++ b/styles/main.less
@@ -1,33 +1,1 @@
-@import "vendors/bootstrap.less";
-
-// Mixin
-.trop-mignon(@color) {
-  background-color: @color;
-}
-
-// Variables
-@main-color: #c7ddef;
-
-// Ruleset
-@seconde-color-node: {
-  // Mixin call
-  .trop-mignon(#ce8483);
-};
-
-// Nesting
-body {
-  .container;
-  header {
-    .make-row;
-    h1, h2 {
-      .make-xs-column(6);
-    }
-    h1 {
-      .trop-mignon(@main-color);
-    }
-    h2 {
-      // Ruleset call
-      @seconde-color-node();
-    }
-  }
-}
+@import "grid.less";
