--- a/styles/main.less
+++ b/styles/main.less
@@ -1,1 +1,16 @@
 @import "grid.less";
+
+body {
+  .row();
+  margin: 0 auto;
+}
+
+header nav {
+  .row();
+  h1 {
+    .column(2);
+  }
+  a {
+    .column(2);
+  }
+}
